welcome.lessons.welcome.array.has271.Has271.scala.error
has271:2: error: type mismatch;
 found   : Unit
 required: Boolean
  for (i<-2 to nums.length-1){
        ^